tests/ui/debug_not_field.rs
struct NoDebug;

#[derive(debug3::Debug)]
struct HasDebug(NoDebug);

fn main() {}
